--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "@react-navigation/stack": "^6.3.5",
+    "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.0",
+    "native-base": "^3.4.23",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-paper": "5.0.0-rc.10",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
